--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>URL Catching Game!</title>
   </head>
   <body>
+    <main>
+      <h1>URL Catching Game!</h1>
+      <p>
+        Catch the items falling from the right side by moving up and down, all
+        in the URL bar! Use arrow keys, w/s, or k/j to move the player up and
+        down. Speed increases as your score increases! Inspired by
+        <a target="_blank" href="https://demian.ferrei.ro/snake">URL Snake</a>
+      </p>
+      <p>High Score: <b>0</b></p>
+      <div class="best-summary"></div>
+    </main>
     <script src="catch.js"></script>
   </body>
 </html>
